--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;700&display=swap");
 
 /* || General styles */
-body {
+/* body {
   font-family: "Readex Pro", sans-serif;
   /* height: 100vh; */
+  
+
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  list-style: none;
+  scroll-behavior: smooth;
 }
 
-* {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
+body{
+  background: white;
+  color: black;
 }
 
 
@@ -21,7 +30,7 @@ a {
 .primary-button {
   background: linear-gradient(45deg, #fd2b75, #ff4b2b);
   border: 0;
-  border-radius: 30px;
+  border-radius: 10px;
   color: white;
   font-size: 18px;
   font-weight: bold;
@@ -36,12 +45,12 @@ a {
 .secondary-button {
   background: #ffffff;
   border: 0;
-  border-radius: 30px;
+  border-radius: 10px;
   color: black;
   font-size: 20px;
   font-weight: bold;
   padding: 12px 25px;
-  transition: ease-out 0.3s;
+  transition: 0.3s all;
 }
 
 .secondary-button:hover {
@@ -55,15 +64,13 @@ a {
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-  padding: 15px 40px 15px 40px;
+  padding: 15px 50px 15px 50px;
   width: 100%;
   position: fixed;
-  /* background-color: #a8187d; */
-  background: rgba(206, 34, 180, 0.65);
-  backdrop-filter: blur( 13px );
-  -webkit-backdrop-filter: blur( 13px );
-  transition: all 0.5s;
-  z-index: 1;
+  /* background-color: #e94361; */
+
+  background-image: linear-gradient(90deg,#fd267d,#ff7854);
+  z-index: 1000;
 }
 
 .navbar .links-navbar ul {
@@ -77,13 +84,14 @@ a {
 
 a.logo {
   color: #ffffff;
-  font-size: 32px;
+  font-size: 25px;
   font-weight: bold;
 }
 
+
 .navbar .links-navbar ul li a {
   color: white;
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 400;
 }
 
@@ -154,26 +162,28 @@ a.logo {
   transform: rotate(-45deg);
 }
 
-/* ----- home style ----- */
-
+/*-------------- section - common for all ------------*/
 
 section{
-  padding: 40px 8%;
+  padding: 60px 8%; 
 }
 
-.home {
+/*-------------- section - common for all ------------*/
+
+.home{
   position: relative;
+  width: 100%;
   height: 100vh;
-  /* background-image:linear-gradient(60deg,rgba(31, 196, 174, 0.9) 50%,transparent 50%), url(../img/Blue-Landscape3.png);; */
-  background-image: linear-gradient(rgba(23, 10, 20, 0.129), rgba(23, 10, 20, 0.229)),url(../img/background-main2.png);
+  background: url(/img/main-background.png);
+  filter: saturate(120%);
   background-size: cover;
   background-position: center;
-  /* text-align: left; */
-  align-items: center;
   display: grid;
   grid-template-columns: repeat(1,1fr);
+  align-items: center;
 }
-.home .home-text{
+
+.home-text{
   width:50%;
 }
 
@@ -187,42 +197,62 @@ section{
 
 .home h2 {
   color: white;
-  font-size: 3vw;
-  margin-bottom: 40px;
+  font-size: 2vw;
+  margin-bottom: 20px;
   padding: 10px;
 }
 
-/* .mobile-login {
-  background-color: transparent;
-  border-radius: 40px;
-  border: 2px solid white;
-  color: white;
+.home p{
+  color: rgb(255, 255, 255);
+  font-size: 15px;
+  line-height: 1.8;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+.mobile-login {
   display: none;
-  font-size: 20px;
   font-weight: bold;
   margin-top: 20px;
-  padding: 12px 45px;
-  transition: all ease-out 0.3s;
-  z-index: 2;
-} */
+  z-index: 1;
+
+  background: linear-gradient(45deg, #fd2b75, #ff4b2b);
+  border: 0;
+  border-radius: 20px;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 13px 35px;
+  transition: 0.3s all;
+}
 
 
 /* ----- Special service ----- */
 
 .special{
-  /* background-color: #6b2757; */
-  background-color: #a8187d;
+  background: #ffffff;
 }
 
 .special-div{
-  display: inline-block;
+  margin: auto;
+  margin-bottom: 20px;
 }
 
 .heading{
+  font-size: 2rem;
+  /* color: rgb(106, 13, 73); */
+  color: #e94361;
+  font-weight: 600;
   text-align: center;
-  padding: 40px;
-  color: #ffffff;
+  padding: 20px;
   text-transform: uppercase;
+}
+
+.sub-heading{
+  /* color: rgb(106, 13, 73); */
+  color: rgb(28, 27, 28);
+  text-align: center;
+  margin: 10px 50px;
 }
 
 .special-content{
@@ -242,132 +272,107 @@ section{
 }
 
 .special-box a{
-  font-size: 1.5rem;
-  font-weight: 500;
+  font-size: 1.3rem;
+  font-weight: 600;
   margin: 0.5rem 0;
   text-decoration: none;
   text-transform: uppercase;
-  color: rgb(226, 211, 43);
+  color: #e94361;
 }
 
 .special-box p{
   font-size: 0.9rem;
   margin-bottom: auto;
   width: 70%;
-  color: #ffffff;
+  color: rgb(41, 37, 40);
 }
 
 .special-img{
-  margin: auto;
-  width: 70%;
-  height: 70%;
+  width: 10rem;
   object-fit: cover;
   object-position: center;
 }
 
-/* testimonials */
+/* ----------- testimonials ------------*/
 
+
+.testimonials{
+  /* background-color: #ffe2e2; */
+  background-image: linear-gradient(90deg,#fd267d,#ff7854);
+}
+
+.testimonials .heading{
+  color: #ffffff;
+}
+
+.testimonials .sub-heading{
+  color: #ededed;
+}
 
 .slide-container{
-  max-width: 1120px;
+  max-width: 1150px;
   width: 100%;
   padding: 40px 0;
 }
 .slide-content{
   margin: 0 40px;
   overflow: hidden;
-  border-radius: 25px;
+  border-radius: 0px 10px;
 }
+
 .card{
-  border-radius: 25px;
-  background-color: #FFF;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 30px rgba(160, 160, 160, 0.18);
 }
-.image-content,
-.card-content{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 30px 14px;
-}
-.image-content{
+.container{
   position: relative;
-  row-gap: 5px;
-  padding: 25px 0;
+  clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);
 }
-.overlay{
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
+.slide-img{
   width: 100%;
-  background-color: #aa3386;
-  border-radius: 25px 25px 0 25px;
+  display: block;
+  filter: brightness(80%);
 }
-.overlay::before,
-.overlay::after{
-  content: '';
-  position: absolute;
-  right: 0;
-  bottom: -40px;
-  height: 40px;
-  width: 40px;
-  background-color: #aa3386;
-}
-.overlay::after{
-  border-radius: 0 25px 0 0;
-  background-color: #FFF;
-}
-.card-image{
-  position: relative;
-  height: 150px;
-  width: 150px;
-  border-radius: 10%;
-  background: #FFF;
-  padding: 3px;
-}
-.card-image .card-img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 10%;
-  border: 4px solid #aa3386;
-}
-.name{
-  font-size: 18px;
-  font-weight: 500;
-  color: #333;
-}
-.description{
-  font-size: 14px;
-  margin: 5px 0 5px 0;
-  color: #707070;
-  text-align: center;
-}
-.button{
-  border: none;
-  font-size: 16px;
-  color: #FFF;
-  padding: 8px 16px;
-  background-color: #aa3386;
-  border-radius: 6px;
-  margin: 14px;
+.slide-img:hover{
+  filter: brightness(100%) saturate(150%);
+  transform: scale(1.04);
   cursor: pointer;
-  transition: all 0.3s ease;
 }
-.button:hover{
-  background: #aa3386;
+
+.details{
+  padding: 20px 10px;
+}
+.details>h3{
+  color: #000000;
+  font-weight: 600;
+  font-size: 18px;
+  margin: 10px 0 15px 0;
+}
+.details>p{
+  color: #a0a0a0;
+  font-size: 15px;
+  line-height: 30px;
+  font-weight: 400;
+}
+
+.details>a{
+  color: #ff4e4e;
+  font-size: 15px;
+  line-height: 30px;
+  font-weight: 400;
 }
 
 .swiper-navBtn{
-  color: #aa3386;
+  color: #ffffff;
   transition: color 0.3s ease;
 }
 .swiper-navBtn:hover{
-  color: #aa3386;
+  color: #ffffff;
 }
 .swiper-navBtn::before,
 .swiper-navBtn::after{
   font-size: 35px;
+  font-weight:bold;
 }
 .swiper-button-next{
   right: 0;
@@ -376,30 +381,114 @@ section{
   left: 0;
 }
 .swiper-pagination-bullet{
-  background-color: #aa3386;
+  background-color: #ffffff;
   opacity: 1;
 }
 .swiper-pagination-bullet-active{
-  background-color: #aa3386;
+  background-color: #ffffff;
 }
 
 
 /* ----- footer style ----- */
-footer {
-  bottom: 0;
-  color: #bcbcbc;
-  margin: 10px 20px;
-  position: fixed;
-  right: 0;
+
+#footer{
+  background: rgb(243, 243, 243);
+
+}
+.footer-content{
+  padding: 20px 0;
 }
 
-footer p {
-  font-size: 12px;
+.main{
+  display: flex;
+  flex-wrap: wrap;
 }
+
+.list{
+  width: 25%;
+}
+
+.list h4{
+  font-size: 21px;
+  color: rgb(232, 64, 64);
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.list h4::before{
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 60px;
+  left:0;
+  bottom: -10px;
+  background-color: black;
+}
+
+.list ul li:not(last-child){
+  margin-bottom: 16px;
+}
+
+.list ul li a{
+  color: rgb(0, 0, 0);
+  font-size: 0.9rem;
+  display: block;
+  transition: .3s;
+}
+
+.list ul li a:hover{
+  transform: translateX(5px);
+}
+
+.list .social a{
+  height: 40px;
+  width: 40px;
+  background: #e94361;
+  color: rgb(255, 255, 255);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size:21px;
+  border-radius: 15px;
+  margin-right: 5px;
+  transition: .3s;
+}
+
+.list .social a:hover{
+  background: rgb(0, 0, 0);
+  color: #e94361;
+}
+
+.end-text{
+  text-align: center;
+  padding-top: 90px;
+}
+
+.end-text p{
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  letter-spacing: 2px;
+}
+
+.heart-icon{
+  color: #ea2424;
+}
+
+
 
 /* ----- responsive ----- */
 
 @media only screen and (max-width: 600px){
+
+  .home h1 {
+    color: white;
+  }
+
+  .home h2 {
+    color: white;
+    font-size: 15px;
+  }
+
 
   /*---------- special service section ------------*/
 
@@ -416,19 +505,32 @@ footer p {
     font-size: 0.9rem;
     padding-bottom: 8px;
     width: 50%;
-    color: #ffffff;
+    color: rgb(41, 37, 40);
   }
-  .special-img{
-    padding: 8px;
-    width: 50%;
-    height: 50%;
-    object-fit: cover;
-    object-position: center;
+
+
+  /*-------------------- footer responsive---------- */
+
+  #list{
+    width: 100%;
+  }
+  .end-text{
+    padding-top: 30px;
+  }
+  
+  .end-text p{
+    font-size: 10px;
+    letter-spacing: 1px;
   }
 }
 
 
 @media screen and (max-width: 768px) {
+
+  .home h1 {
+    color: white;
+    font-size: 40px;
+  }
 
   /*-------- testimonial section ----------*/
 
@@ -445,33 +547,28 @@ footer p {
 @media screen and (max-width: 900px) {
   /* ------ general responsive styles -----  */
 
-  .navbar {
-    background: rgba(28, 17, 27, 0.65);
+  #navbar {
+    padding: 15px 30px 15px 30px;
+    z-index: 1000;
   }
 
   .home {
-    /* background-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5), rgb(0, 0, 0)),
-      url("../img/background.jpeg"); */
-    /* display: flex;
-    flex-direction: column;
+    background-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5), rgb(0, 0, 0)),
+      url("../img/background.jpeg");
     text-align: center;
     background-size: cover;
-    padding: 10rem;
-    height: 50vh; */
   }
   .primary-button {
+    display: inline-block;
     background: white;
     color: black;
     border: 2px solid white;
+    font-size: 15px;
   }
 
   .primary-button:hover {
     color: white;
     background: transparent;
-  }
-
-  .mobile-login {
-    display: block;
   }
 
   /* ------ navbar responsive style ------  */
@@ -497,7 +594,6 @@ footer p {
     top: 0;
     transition: 0.5s;
     width: 100%;
-    z-index: 1;
   }
 
   .mobile-menu {
@@ -517,32 +613,59 @@ footer p {
 
   /* ------ home reponsive style -----  */
 
-  /* .mobile-login {
-    display: block;
+  .mobile-login {
+    display: inline-block;
+    font-size: 15px;
+    border-radius: 10px;
   }
 
   .mobile-login:hover {
-    background: white;
-    color: black;
+    background:transparent;
+    background-color: #ffffff;
+    color: rgb(255, 64, 64);
   }
 
   .home {
     display: flex;
     flex-direction: column;
-  } */
+  }
+
+  .home-text{
+    margin-top: 70px;
+    width:100%;
+  }
+
+  .home p{
+    /* display: none; */
+    width: 70%;
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    line-height: 1.8;
+    margin:auto;
+    padding: 10px;
+  }
 
   .special-box p{
     font-size: 0.9rem;
     padding-bottom: 8px;
     width: 60%;
-    color: #ffffff;
+    color: rgb(41, 37, 40);
   }
+}
 
-  /* ------- footer responsive style  ------  */
-  footer {
-    color: #616874;
-    left: 0;
-    right: 0;
-    text-align: center;
+/*-------------------- footer responsive---------- */
+
+@media(max-width:1040px){
+  .list{
+    width: 50%;
+    margin-bottom: 12px;
+  }
+  .end-text{
+    padding-top: 60px;
+  }
+  
+  .end-text p{
+    color: rgb(255, 255, 255);
+    font-size: 13px;
   }
 }
