--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;700&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 /* || General styles */
 /* body {
   font-family: "Readex Pro", sans-serif;
   /* height: 100vh; */
   
-
 
 *{
   padding: 0;
@@ -174,7 +174,7 @@ section{
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(/img/main-background.png);
+  background: url(../img/main-background.png);
   filter: saturate(120%);
   background-size: cover;
   background-position: center;
@@ -665,7 +665,7 @@ section{
   }
   
   .end-text p{
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-size: 13px;
   }
 }
