--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;500;600;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;500;600;700&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body {
-  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)),
-    url("../img/romantic_dinner.jpg");
+  background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.5)),url("../img/background.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "Readex Pro", sans-serif;
-  height: 100vh;
+  background-attachment: fixed;
+  /* font-family: "Readex Pro", sans-serif; */
+  font-family: 'Montserrat', sans-serif;
+  
 }
 
 * {
@@ -36,8 +38,8 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 700px;
-  width: 450px;
+  height: 500px;
+  width: 500px;
 }
 
 .form-content {
@@ -50,7 +52,7 @@ a {
 .form-content h2 {
   color: white;
   font-size: 55px;
-  margin-top: 6vw;
+  margin-top: 1vw;
 }
 
 .form-content h2 a {
@@ -61,14 +63,15 @@ a {
   color: #ffffff;
   font-size: 25px;
   font-style: italic;
-  margin-top: 120px;
+  margin-top: 40px;
   text-transform: uppercase;
 }
 
 .form-content p {
   text-align: center;
   color: #ffffff;
-  margin-top: 20px;
+  margin: 20px 30px 0px;
+  font-size: 15px;
 }
 
 .form-content p a {
@@ -95,7 +98,7 @@ form {
 .form-container .form-content input {
   color: white;
   font-weight: bold;
-  width: 80%;
+  width: 50%;
   border-radius: 20px;
   padding: 10px 20px;
   margin: 10px 0 0;
@@ -110,19 +113,29 @@ form {
   font-weight: bold;
 }
 
-input:focus {
+/* input:focus {
   transform: scale(1.1);
-}
+} */
 
-.btn-login:hover,
+/* .btn-login:hover,
 .btn-login:active {
   transform: scale(1.1);
-}
+} */
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 600px) {
   .form-container {
     height: 100%;
     width: 100%;
     border-radius: inherit;
+  }
+
+  .form-container .form-content input {
+    margin: 20px auto ;
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+  }
+  .btn-login{
+    align-items: center;
   }
 }
