--- a/css/register.css
+++ b/css/register.css
@@ -1,7 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;500;600;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;500;600;700&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 
 body {
-  font-family: "Readex Pro", sans-serif;
+  /* font-family: "Readex Pro", sans-serif; */
+  font-family: 'Montserrat', sans-serif;
 }
 
 * {
