--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ section {
   font-size: 2rem;
   /* color: rgb(106, 13, 73); */
   color: #e94361;
-  font-weight: 600;
+  font-weight: 700;
   text-align: center;
   padding: 20px;
   text-transform: uppercase;
@@ -294,6 +294,161 @@ section {
   object-fit: cover;
   object-position: center;
 }
+
+/* ----------- Why Choose Section ------------*/
+
+.why-choose{
+  background-image: linear-gradient(90deg, #fd267d, #ff7854);
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(17rem,auto));
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.why-choose img{
+  border-bottom: 0.5rem;
+  height:fit-content;
+  width: 100%;
+}
+
+.why-choose-text h2{
+  /* color: rgb(237, 53, 90); */
+  color: #ffffff;
+  font-size: 2rem;
+  font-weight: 700;
+  padding-bottom:20px ;
+  text-transform: uppercase;
+}
+
+.why-choose-text p{
+  color: #efefef;
+  justify-content: baseline;
+  font-size: 1.1rem;
+
+  line-height: 1.5;
+  margin: 0.5rem 0 1.1rem;
+}
+
+@media(max-width:1300px){
+  .why-choose-text h2{
+    font-size: 1.8rem;
+  }
+  
+  .why-choose-text p{
+    font-size: 1rem;
+  }
+}
+
+
+@media(max-width:1100px){
+  .why-choose-text h2{
+    font-size: 1.5rem;
+  }
+  
+  .why-choose-text p{
+    font-size: 0.9rem;
+  }
+}
+
+@media(max-width:1050px){
+  .why-choose-text h2{
+    font-size: 1.2rem;
+  }
+  
+  .why-choose-text p{
+    font-size: 0.8rem;
+  }
+}
+
+@media(max-width:750px){
+  .why-choose{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+  }
+
+  .why-choose img{
+    border-bottom: 0.5rem;
+    height:fit-content;
+    width: 100%;
+  }
+  .why-choose-text h2{
+    font-size: 2rem;
+  }
+  
+  .why-choose-text p{
+    font-size: 0.9rem;
+  }
+}
+
+@media(max-width:500px){
+  .why-choose-text h2{
+    font-size: 1rem;
+  }
+  
+  .why-choose-text p{
+    font-size: 0.75rem;
+  }
+}
+
+/*------------------ find-love section-------------- */
+
+
+.find-love{
+  padding: 100px;
+}
+
+.find-love-content{
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,1fr);
+  justify-content: center;
+  align-items: center;
+}
+
+.find-love-content h1{
+  font-size: 2.2rem;
+  padding-bottom: 15px;
+}
+
+.find-love-content a{
+  background: linear-gradient(45deg, #fd2b75, #ff4b2b);
+  border: 0;
+  border-radius: 10px;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 12px 15px;
+  transition: 0.3s all;
+  margin: auto;
+}
+
+@media(max-width:650px){
+  .find-love{
+    padding: 80px;
+  }
+  .find-love-content h1{
+    font-size: 1.5rem;
+  }
+  
+  .find-love-content a{
+    font-size: 15px;
+  }
+}
+
+@media(max-width:500px){
+  .find-love{
+    padding: 50px;
+  }
+
+  .find-love-content h1{
+    font-size: 1rem;
+  }
+  
+  .find-love-content a{
+    font-size: 8px;
+  }
+}
+
 
 /* ----------- testimonials ------------*/
 
@@ -403,6 +558,7 @@ section {
 .swiper-pagination-bullet-active {
   background-color: #ffffff;
 }
+
 
 
 /* ----- footer style ----- */
