--- a/css/advice.css
+++ b/css/advice.css
@@ -153,7 +153,7 @@ section {
 
 .home{
     width: 100%;
-    min-height: 440px;
+    min-height: 27.5px;
     background: url("../images/new1.jpeg");
     display: grid;
     justify-content: center;
@@ -166,7 +166,8 @@ section {
 }
 
 .home-title{
-    font-size: 3.5rem;
+    font-size: 4rem;
+    margin-bottom: 1rem;
 }
 
 .home-subtitle{
