--- a/css/advice.css
+++ b/css/advice.css
@@ -12,6 +12,7 @@
 
 /* root values */
 :root{
+    --container-color: #1a1e21;
     --first-color: linear-gradient(90deg, #fe3175, #ff6f63);
     --text-color: #172317;
     --bg-color: #fff;
@@ -153,7 +154,7 @@ section {
 
 .home{
     width: 100%;
-    min-height: 27.5px;
+    min-height: 400px;
     background: url("../images/new1.jpeg");
     display: grid;
     justify-content: center;
@@ -336,28 +337,58 @@ section {
     line-height: 1.5rem;
     color: #d3002e;
 }
+.back-home{
+  color: #d3002e;
+  font-size: 0.9rem;
+}
 
+.header-title{
+  width: 90%;
+  font-size: 2.6rem;
+  color: var(--bg-color);
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.header-img{
+  width: 100%;
+  height: 420px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.post-content{
+  margin-top: 10rem !important;
+}
+
+.sub-heading{
+  font-size: 1.2rem;
+}
+
+.post-text{
+  font-size: 1rem;
+  line-height: 1.7rem;
+  margin: 1rem 0;
+  text-align: justify;
+}
 .profile{
-    display: flex;
-    margin-top: 8px;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .profile-img{
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center;
-    border: 2px solid var(--first-color);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+  border: 2px solid var(--second-color);
 }
 
 .profile-name{
-    font-size: 0.8rem;
-    font-weight: 500;
+  font-size: .8rem;
+  font-weight: 500;
 }
-
 
 
 /* ----- footer style ----- */
